# gseg_pcd_tools

./: CMakeLists.txt  README.md
include/: dataio.hpp  utility.h
matlab/: fit_plane_from_pts.m  get_aoi2p_deg.m  get_mdc2s_m.m  gseg_analyze_pcd_grid.m  projpoint2plane.m  test_gseg_analyze_pcd_grid.m
matlab/testdata/: sourcelst_example_linux.txt  sourcelst_example_win.txt  test_grids_def.txt  test_plane_coefficients.txt
matlab/testdata/GridPointCloudS1/: 1.pcd  10.pcd  100.pcd  101.pcd  102.pcd  103.pcd  104.pcd  105.pcd  106.pcd  107.pcd  108.pcd  109.pcd  110.pcd  111.pcd  112.pcd  113.pcd  114.pcd  115.pcd  116.pcd  117.pcd  118.pcd  119.pcd  12.pcd  120.pcd  121.pcd  122.pcd  123.pcd  124.pcd  125.pcd  126.pcd  127.pcd  128.pcd  129.pcd  13.pcd  130.pcd  131.pcd  132.pcd  133.pcd  134.pcd  135.pcd  (+298 more)
matlab/testdata/GridPointCloudS3/: 1.pcd  100.pcd  101.pcd  102.pcd  103.pcd  104.pcd  105.pcd  106.pcd  107.pcd  108.pcd  109.pcd  110.pcd  111.pcd  112.pcd  113.pcd  114.pcd  115.pcd  116.pcd  117.pcd  118.pcd  119.pcd  12.pcd  120.pcd  121.pcd  122.pcd  123.pcd  124.pcd  125.pcd  126.pcd  127.pcd  128.pcd  129.pcd  13.pcd  130.pcd  131.pcd  132.pcd  133.pcd  134.pcd  135.pcd  136.pcd  (+297 more)
script/: run_pcd2grid.sh  run_pcdcut.sh
test/: gseg_pcd2grid.cpp  gseg_pcdcut.cpp
test_data/: test_polygon.txt
